--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <h1 style="text-align: center;"> Alguns ananços no meu estudo de análise e desenvolvimento de sistemas</h1>
+    <h1 style="text-align: center;"> Alguns avanços no meu estudo de análise e desenvolvimento de sistemas</h1>
     <div class="card" style="width: 18rem;">
         <img src="C:\Users\55519\Pictures\Imagens da Câmera\20181031_151633 (2).jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Html, Css e Bootstrap</p>
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
